--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -48,7 +48,7 @@ jobs:
       with:
         login-server: ${{ secrets.STAP_ACR_LOGIN_SERVER }}
         username: ${{ secrets.STAP_ACR_USERNAME }}
-        password: ${{ secrets.REGISTRY_PASSWORD }}
+        password: ${{ secrets.STAP_ACR_PASSWORD }}
     
     - run: |
           docker push ${{ secrets.STAP_ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ steps.gen-version.outputs.VERSION }}
