--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: cloud-sample 
-          image: cepgstapacr.azurecr.io/cloud-sample
+          image: cepgstapacr.azurecr.io/sample-99995709
           ports:
           - containerPort: 8080
