--- a/manifests/base/ingress.yaml
+++ b/manifests/base/ingress.yaml
@@ -1,17 +1,17 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: cloud-sample-ingress
+  name: sample-99995709-ingress
 spec:
   ingressClassName: ingress-internal
   rules:
-  - host: cloud-sample.pg-aa.kubepia.net
+  - host: sample-99995709.pg-aa.kubepia.net
     http:
       paths:
       - path: /
         backend:
           service:
-            name: cloud-sample
+            name: sample-99995709
             port:
               number: 8080
         pathType: Prefix
