--- a/manifests/overlays/prod/deployment.yaml
+++ b/manifests/overlays/prod/deployment.yaml
@@ -1,31 +1,31 @@
 apiVersion : apps/v1
 kind: Deployment
 metadata:
-  name: cloud-sample
+  name: sample-99995709
 spec:
   replicas: 1
   template:
     spec:
       containers:
-        - name: cloud-sample 
+        - name: sample-99995709
           command: ["java","-jar","/app.jar"]
           args: ["--spring.config.location=file:/config/application.yml"]
           volumeMounts:
-          - mountPath: /mnt/cloud-sample
-            name: cloud-sample-volume
+          - mountPath: /mnt/sample-99995709
+            name: sample-99995709-volume
             readOnly: false
-            subPath: cloud-sample
+            subPath: sample-99995709
           - mountPath: /config
             name: application-properties
             readOnly: true
                           
       volumes:
-      - name: cloud-sample-volume
+      - name: sample-99995709-volume
         persistentVolumeClaim:
           claimName: cepg-aa-std-pvc
       - name: application-properties
         configMap:
-          name: cloud-sample-configmap
+          name: sample-99995709-configmap
           items:
             - key: application.yml
               path: application.yml
