--- a/Dockerfile-maven
+++ b/Dockerfile-maven
@@ -1,5 +1,5 @@
 # FROM bellsoft/liberica-openjdk-alpine:17
-FROM cepgbaseacr.azurecr.io/mcr.microsoft.com/openjdk/jdk:17-ubuntu
+FROM cepgbaseacr.azurecr.io/docker.io/openjdk:17-slim
 
 VOLUME /tmp
 
