--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: sample-99995709
-          image: cepg-99995709-sa-std-rg/sample-99995709
+          image: ce99995709acr.azurecr.io/sample-99995709
           ports:
           - containerPort: 8080
