--- a/manifests/overlays/prod/application.yml
+++ b/manifests/overlays/prod/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://cepg-99995709-sa-std-psql.postgres.database.azure.com:5432/postgres
+    url: jdbc:postgresql://ce-aa-db.postgres.database.azure.com:5432/cloud_sample
     username: ktds
     password: Ktds!1234
     hikari:
