--- a/manifests/overlays/prod/pvc.yaml
+++ b/manifests/overlays/prod/pvc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: cepg-sa-std-pvc
+  name: ce-aa-pvc
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: cepg-sa-std-rwmany
+  storageClassName: ce-aa-rwmany
   resources:
     requests:
       storage: 1Gi
