--- a/manifests/overlays/prod/pvc.yaml
+++ b/manifests/overlays/prod/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: ce-sa-rwmany
+  storageClassName: ce-aa-rwmany
   resources:
     requests:
       storage: 1Gi
