시험환경 SA 구성

--- a/manifests/overlays/prod/application.yml
+++ b/manifests/overlays/prod/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://ce-aa-psql.postgres.database.azure.com:5432/postgres
+    url: jdbc:postgresql://ce-99995709-sa-psql.postgres.database.azure.com:5432/postgres
     username: ktds
     password: Ktds!1234
     hikari:
