시험환경 SA 구성

--- a/manifests/overlays/prod/deployment.yaml
+++ b/manifests/overlays/prod/deployment.yaml
@@ -22,7 +22,7 @@ spec:
       volumes:
       - name: sample-99995709-volume
         persistentVolumeClaim:
-          claimName: ce-aa-pvc
+          claimName: ce-sa-pvc
       - name: application-properties
         configMap:
           name: sample-99995709-configmap
