--- a/manifests/overlays/prod/pvc.yaml
+++ b/manifests/overlays/prod/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: ce-aa-pvc
+  name: ce-sa-pvc
 spec:
   accessModes:
     - ReadWriteMany
